--- a/style.css
+++ b/style.css
@@ -1,11 +1,104 @@
-.main {
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
+body {
 	max-width: 100em;
-	font-family: "Helvetica", "Arial", sans-serif;
-	font-size: 24px;
-	line-height: 1.5;
-  	padding: 4em 1em;
+  	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  	padding: 0;
+	margin: 0;
+	color: #566b78;
 }
 
-p {
-	padding: 1em;
+main {
+	font-size: 16px;
+	padding: 4em 1em;
+	line-height: 1.5;
+	margin: 0 auto;
+    max-width: 50em;
+}
+
+h1,
+h2,
+strong {
+  color: #333;
+}
+
+code,
+pre {
+  background: #f5f7f9;
+  border-bottom: 1px solid #d8dee9;
+  color: #a7adba;
+}
+
+code {
+  padding: 2px 4px;
+  vertical-align: text-bottom;
+}
+
+pre {
+  border-left: 2px solid #69c;
+}
+
+a {
+  color: #e81c4f;
+}
+
+img {
+	width: 100%;
+}
+
+header {
+  background-color: #263d36;
+  background-image: url("images/rusty_bathtime.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  line-height: 1.2;
+  padding: 10vw 2em;
+  text-align: center;
+  color: white;
+}
+
+header #logo {
+    display: inline-block;
+    height: 160px;
+    vertical-align: top;
+    width: 160px;
+	border-radius: 90px;
+	background-image: url(images/rusty_bubbles.jpg);
+	background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header img {
+  display: inline-block;
+  height: 120px;
+  vertical-align: top;
+  width: 120px;
+}
+
+header h1 {
+	font-size: 3em; 
+	font-weight: 300;
+	color: white;
+	font-weight: bold;
+}
+
+header a {
+  border: 1px solid #e81c4f;
+  border-radius: 290486px;
+  color: white;
+  font-size: 0.6em;
+  letter-spacing: 0.2em;
+  padding: 1em 2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: none 200ms ease-out;
+  transition-property: color, background;
+}
+
+header a:hover {
+  background:  #e81c4f;
+  color: white;
+	border: 1px solid #e81c4f;
 }
