--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img {
 header {
   background-color: #263d36;
   background-image: url("images/rusty_bathtime.png");
-  background-position: center top;
+  background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
   line-height: 1.2;
